--- a/release/losu0.1/构建.md
+++ b/release/losu0.1/构建.md
@@ -84,10 +84,10 @@ copy ./bin/*.exe C:/losu/bin/
 可以使用 -static参数
 
 3. 编译支持库
-将./lib文件夹下的分别编译为动态库
+将./lib文件夹下的分别编译为动态库，推荐使用-fPIC参数
 
 ```
-g++ -o [?].lsd -shared [?].cpp
+g++ -o [?].lsd -shared -fPIC [?].cpp
 ```
 复制到 LS_ROOT/lvm 目录下
 
@@ -102,4 +102,5 @@ losuc [文件名]
 复制输出文件到 LS_ROOT/inc/目录下
 
 5.测试
-找一个示例程序测试一下。
+
+用洛书示例程序测试一下，观察LPK是否正常工作。
