--- a/release/losu0.1/构建.md
+++ b/release/losu0.1/构建.md
@@ -70,9 +70,9 @@ cp ./bin/* /usr/local/bin
 ```
 losu.cpp:(.text+0x2585): warning: Using 'dlopen' in statically linked applications requires at runtime the shared libraries from the glibc version used for linking
 ```
-不影响运行的化可以忽略<br>
+不影响运行的话可以忽略<br>
 如果运行运行时出现SF错误<br>
-解决方法 手动添加 -std=参数
+解决方法 手动添加 -std=参数<br>
 windows:
 
 ```
@@ -81,7 +81,7 @@ g++ -o ./bin/losu.exe ./bin/losu.cpp -lpthread
 g++ -o ./bin/lpt.exe ./bin/lpt.cpp
 copy ./bin/*.exe C:/losu/bin/
 ```
-可以使用 -static参数
+可以使用 -static参数，Windows API不会警告
 
 3. 编译支持库
 将./lib文件夹下的分别编译为动态库，推荐使用-fPIC参数
