--- a/release/losu0.1/构建.md
+++ b/release/losu0.1/构建.md
@@ -39,6 +39,7 @@ linux:
 ```
 sudo su
 mkdir /usr/local/lib/losu
+mkdir /usr/local/lib/losu/inc
 mkdir /usr/local/lib/losu/lvm
 mkdir /usr/local/lib/losu/lsi
 ```
