--- a/losu0.2/安装与卸载.md
+++ b/losu0.2/安装与卸载.md
@@ -26,7 +26,7 @@ wget https://gitee.com/chen-chaochen/lpk/raw/release/losu0.2/install/install.bat
 + linux安装
 
 ```
-wget https://gitee.com/chen-chaochen/lpk/raw/release/losu0.2/install/install.sh&&sudo ./install.sh
+wget https://gitee.com/chen-chaochen/lpk/raw/release/losu0.2/install/install.sh&&sudo bash ./install.sh
 ```
 
 
@@ -46,7 +46,7 @@ wget https://gitee.com/chen-chaochen/lpk/raw/release/losu0.2/install/uninstall.b
 
 
 ```
-wget https://gitee.com/chen-chaochen/lpk/raw/release/losu0.2/install/uninstall.sh&&sudo ./uninstall.sh
+wget https://gitee.com/chen-chaochen/lpk/raw/release/losu0.2/install/uninstall.sh&&sudo bash ./uninstall.sh
 
 ```
 
