update 洛书 1.0 LTS 技术文档/简介文档/洛书的设计想法.md.
Signed-off-by: 陈朝臣 <9062498+chen-chaochen@user.noreply.gitee.com>

--- a/洛书 1.0 LTS 技术文档/简介文档/洛书的设计想法.md
+++ b/洛书 1.0 LTS 技术文档/简介文档/洛书的设计想法.md
@@ -40,7 +40,7 @@
 
 在实际应用中，可以将底层细节统统交给接口语言，顶层封装出合理的洛书方法
 
-使用者可以专注于问题解决方案的实际而不是方案的实现。有效降低编程难度。
+使用者可以专注于问题解决方案的规划而不是方案的实现。有效降低编程难度。
 
 #### 为什么是中文编程
 我不会谈一些像所谓摆脱西方封锁之类的空话，
@@ -128,7 +128,6 @@
 2. 线程
 洛书的线程也是很有特色的
 支持两种使用方式
-1.
 ```
 +方法 开始()
 {
@@ -140,7 +139,6 @@
 }
 ```
 这样在方法 开始 被执行时便会启动线程一，线程一的绝对名为<开始.线程一>，线程内变量相对地址与开始内一致
-2.
 
 ```
 +导入 洛书/线程
