update 洛书 1.0 LTS 技术文档/洛书指令标准-1.0-LTS.md.
Signed-off-by: 陈朝臣 <9062498+chen-chaochen@user.noreply.gitee.com>

--- a/洛书 1.0 LTS 技术文档/洛书指令标准-1.0-LTS.md
+++ b/洛书 1.0 LTS 技术文档/洛书指令标准-1.0-LTS.md
@@ -6,7 +6,19 @@
 | 栈操作     | push<br>add<br>pop       |
 | 变量操作    | mov<br>clear             |
 | 接口指令    | api<br>lvm<br>lei<br>lsi |
+| 控制指令    | sys<br>loop<br>logic<br>thread<goto> |
 | 内嵌函数api | +<br>-<br>*<br>/<br>\\<br>\|<br>array.<br><br>newarry<br><br>getarry<br><br>setarry<br><br>clear  |
 | VM接口 | lvm |
 | 标准接口 | lsi |
 | 拓展接口 | lei |
+
+#### 标签
+
+| 标签                |
+|-------------------|
+| ls_label<>        |
+| <loop.></loop.>   |
+| <logic.></logic.> |
+| <thread.></thread.> |
+ | <webui></webui> |
+
