--- a/嵌入式/ch01-搭建您的嵌入式洛书.md
+++ b/嵌入式/ch01-搭建您的嵌入式洛书.md
@@ -32,12 +32,8 @@
 + 3. 用你喜欢的办法实现宿主机向嵌入式设备传递文件。串口，FTP，U盘拷贝……怎么方便怎么办
 
 #### 附赠一张树莓派的引脚图
-![输入图片说明](../v2-0b3e9e2ec19de7abbcb577aa0e8e7854_b.jpg)
+![输入图片说明](img/v2-0b3e9e2ec19de7abbcb577aa0e8e7854_b.jpg)
 
-
-![输入图片说明](IMG_20220814_210056.jpg)
-
-
-
+![输入图片说明](img/IMG_20220814_210056.jpg)
 
 
