--- a/嵌入式/ch01-搭建您的嵌入式洛书.md
+++ b/嵌入式/ch01-搭建您的嵌入式洛书.md
@@ -31,6 +31,9 @@
 >注意，如果您的平台不支持加载动态库(Linux加载动态库需要glibc),您可以将所有需要的方法加到解释器内部，用-static 编译成只要一个内核就能启动的程序
 + 3. 用你喜欢的办法实现宿主机向嵌入式设备传递文件。串口，FTP，U盘拷贝……怎么方便怎么办
 
+在极端情况下，您只需要一个linux内核加一个文件系统就可以运行标准版的洛书
+也就是说，洛书完全可以像JAVA写安卓那样写系统(大饼)
+
 #### 附赠一张树莓派的引脚图
 ![输入图片说明](img/v2-0b3e9e2ec19de7abbcb577aa0e8e7854_b.jpg)
 
