--- a/嵌入式/ch03-1-点亮小灯珠-基础篇.md
+++ b/嵌入式/ch03-1-点亮小灯珠-基础篇.md
@@ -1,5 +1,5 @@
 ### 电路图
-![输入图片说明](img/%E6%96%B0%E5%BB%BA%20BMP%20%E5%9B%BE%E5%83%8F.jpg)
+![输入图片说明](https://gitee.com/chen-chaochen/lpk/raw/doc/%E5%B5%8C%E5%85%A5%E5%BC%8F/img/%E6%96%B0%E5%BB%BA%20BMP%20%E5%9B%BE%E5%83%8F.jpg)
 很简单的一个电路。
 
 ### 整理思路
@@ -60,12 +60,12 @@
 ####  **！！！强烈建议！！！**
  **接线时不要给嵌入式设备通电，除非您有能力保证不会接错电路** 
 
-![输入图片说明](img/IMG_20220815_121528.jpg)
+![输入图片说明](https://gitee.com/chen-chaochen/lpk/raw/doc/%E5%B5%8C%E5%85%A5%E5%BC%8F/img/IMG_20220815_121528.jpg)
 如图，红色跳线接在18号引脚上，蓝色跳线接在GND(接地)引脚上。(忽略那个红色的插头，那是作者的风扇电源线)
 
 面包板上的接线效果(如果有必要，您得接个限流电阻)
 <br>注意，二极管是有极性的，正负极不能接反
-![输入图片说明](img/IMG_20220815_122056.jpg)
+![输入图片说明](https://gitee.com/chen-chaochen/lpk/raw/doc/%E5%B5%8C%E5%85%A5%E5%BC%8F/img/IMG_20220815_122056.jpg)
 
 ### 编译，执行代码
 + 笔者是在Ubuntu上编译的源代码，然后拷到树莓派上运行的。如果您在Windows上编译，一定要注意，将输出文件转换为UTF-8格式，LF结尾换行
@@ -73,4 +73,4 @@
 + 可以通过设置IDE的生成选项，一次性完成编译与运行授权
 
 效果图
-![输入图片说明](img/IMG_20220815_122755.jpg)
+![输入图片说明](https://gitee.com/chen-chaochen/lpk/raw/doc/%E5%B5%8C%E5%85%A5%E5%BC%8F/img/IMG_20220815_122755.jpg)
