--- a/嵌入式/ch04-1-交通灯-用户篇.md
+++ b/嵌入式/ch04-1-交通灯-用户篇.md
@@ -57,15 +57,16 @@
 #导入 洛书/标准流
 #引用 交通灯
 /*
+    这是注释
     一个自动的交通灯控制程序
     红灯 2s
     绿灯 2s
     黄灯 1s 闪烁5次
 #标准流 程序
 #交通灯 交通灯
-@方法 开始()
+#方法 开始()
     交通灯.配置("16","20","21")
-    +循环("-1")
+    #循环("-1")
         交通灯.红灯.点亮()
         程序.等待("2000")
         交通灯.红灯.熄灭()
