--- a/基础入门/洛书的入门教程.md
+++ b/基础入门/洛书的入门教程.md
@@ -77,17 +77,17 @@
 //设定加载点csip为开始
 +加载 开始
 
-//导入编译好的洛书类 文件 LS_ROOT/inc/洛书/标准流
-+导入 洛书·标准流
+//导入编译好的洛书类 文件 LS_ROOT/inc/洛书/标准流.lsc
++导入 洛书/标准流
 
 //实例化一个对象，推荐放到方法里实例，实例是写给编译器看到
 //对象只在编译时存在，输出文件中只有干货指令，文件很小
-+实例 标准流 标准流 
++标准流 标准流 
 
 //定义开始方法
 +方法 开始()
 {
-    标准流·输出("你好，洛书编程世界\n")
+    标准流.输出("你好，洛书编程世界\n")
     /{
         这是多行注释，洛书0.3及以上版本支持
         补充一个小细节
@@ -99,27 +99,33 @@
 }
 
 ```
+同样功能的河图代码.hetu后缀名
+
+```
+#加载 开始
+#导入 洛书/标准流
+#标准流 程序
+#方法 开始()
+    程序.输出("你好，世界！\n")
+```
+
 
 这个写法太优雅了！
 
 注意事项：
-“·”这个符号是中文输入法下按住键盘左上角的“~”按钮打出来的
-
-不过要注意()，{}，""都是英文字符。
-
-编辑洛书代码时，TAB缩进模式请使用空格，否则会编译出错！
-
+- 不过要注意()，{}，""都是英文字符。
+- 编辑洛书代码时，TAB缩进模式请使用空格，否则会编译出错！
 
 从上述代码中就可以看出，洛书是带有面向对象性质的一门编程语言。
 
 ## 编译
-先确保你的洛书编程环境已经搭建好，然后在控制台输入：
+先确保你的洛书编程环境已经搭建好，然后在控制台输入：以 你好.losu为例
 
 ```
-losuc 文件名
+losuc 你好
 ```
 
-编译后会在同级目录下产生一个.lsc文件，这就是洛书的解释文件。
+编译后会在同级目录下产生一个同名的.lsc文件，这就是洛书的解释文件。
 
 
 在终端输入：
@@ -127,6 +133,13 @@ losuc 文件名
 losu 文件名.lsc
 ```
 补充：在洛书0.3版本以后，在Windows下双击.lsc文件即可运行(把打开方式设位 losu.exe) ，linux上./?.lsc就ok了。 
+
+如果是河图代码，请先下载编译河图编译器，以 你好.hetu为例
+
+```
+河图 你好
+```
+会生成一个 你好.losu文件 与一个 你好.lsc 文件
 
 根据洛书作者的说法，洛书是一门解释性语言，但是我在它身上看到了java的影子，而非与python相似（doge）
 
@@ -156,6 +169,7 @@ losu 文件名.lsc
         }
 }
 +实例 类一 对象一
+//也可写作 +类一 对象一
 +方法 开始()
 {
     //变量一 = <对象一·方法一·变量一>
