--- a/交互运行.md
+++ b/交互运行.md
@@ -23,3 +23,50 @@
 .lsh文件是 losu head文件，洛书头文件，是以洛书源代码形式存在的文件。
 
 可以在其中正常编写洛书代码，可以进行导入模块，实例对象，定义函数等操作，用以在交互时免去导入，实例等操作，直接开始调用交互。
+
+
+#### 多行输入
+输入 << 进入多行输入；输入 >> 开始执行多行语句
+
+#### 如何结束交互
+输入
+>结束
+交互器退出并删除交互临时文件，如果强制退出，可能会引起临时文件残留
+
+#### Demo
+测试.lsh
+
+```
+#加载 开始
+//需要一个虚拟加载点以避免方法 问好() 被自动触发
+#导入 洛书/标准流
+#类 程序
+{
+    #方法 问好(姓名)
+    {
+        标准流.输出("你好,"&姓名&"\n")
+    } 
+}
+#程序 程序
+#方法 开始()
+{ 
+}
+```
+交互器运行时
+```
+losu@losu:~$ ./洛书 测试
+程序.问好("中文编程")
+你好,中文编程
+<<
+#循环 ("5") {
+  程序.问好("洛书编程")
+}
+>>
+你好,洛书编程
+你好,洛书编程
+你好,洛书编程
+你好,洛书编程
+你好,洛书编程
+结束
+losu@losu:~$ 
+```
